--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "emoji-unicode-map": "^1.1.6",
     "node-icu-tokenizer": "^1.0.4"
   }
 }
